--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-6">
+      Your data here
+    </div>
+    <div class="col-xs-6">
+      Your second data here
+    </div>
+  </div>
+</div>
