--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
@@ -25,4 +24,5 @@ $ngmr-theme: mat-light-theme($ngmr-primary, $ngmr-accent, $ngmr-warn);
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($ngmr-theme);
+@import "~bootstrap-grid/css/bootstrap.min.css";
 
